<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_nanodegreeApps"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/portfolio_content_title" />

    <Button
        android:id="@+id/button_spotify_streamer"
        style="@style/udacity_button"
        android:onClick="onClickSpotifyStreamer"
        android:text="@string/spotify_streamer_label" />

    <Button
        android:id="@+id/button_scores_app"
        style="@style/udacity_button"
        android:onClick="onClickScoresApp"
        android:text="@string/scores_app_label" />

    <Button
        android:id="@+id/button_library_app"
        style="@style/udacity_button"
        android:onClick="onClickLibraryApp"
        android:text="@string/library_app_label" />

    <Button
        android:id="@+id/button_build_it_bigger"
        style="@style/udacity_button"
        android:onClick="onClickBuildItBigger"
        android:text="@string/build_it_bigger_label" />

    <Button
        android:id="@+id/button_xyz_reader"
        style="@style/udacity_button"
        android:onClick="onClickXYZReader"
        android:text="@string/xyz_reader_label" />

    <Button
        android:id="@+id/button_capstone"
        style="@style/UdacityButtonFeatured"
        android:onClick="onClickCapstonMyOwnApp"
        android:text="@string/capstone_label" />

</LinearLayout>
